//file:noinspection GradlePackageUpdate
plugins {
	id 'fabric-loom' version '0.12-SNAPSHOT'
	id 'maven-publish'
	id "com.modrinth.minotaur" version "2.+"
}

repositories {
	maven {
		url 'https://masa.dy.fi/maven'
	}
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.minecraft_version+'-'+project.mod_version
group = project.maven_group

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "carpet:fabric-carpet:${project.carpet_minecraft_version}-${project.carpet_core_version}"

	//discord

	modImplementation "org.javacord:javacord-api:${project.javacord_version}"
	modImplementation ("org.javacord:javacord-core:${project.javacord_version}") {
		exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
	}

	include "org.javacord:javacord-api:${project.javacord_version}"
	include ("org.javacord:javacord-core:${project.javacord_version}") {
		exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
	}

	include "io.vavr:vavr:0.10.1"
	
	include "com.squareup.okhttp3:okhttp:3.9.1"
	include "com.squareup.okhttp3:logging-interceptor:3.9.1"
	include "com.fasterxml.jackson.core:jackson-databind:2.9.3"
	include "com.fasterxml.jackson.core:jackson-annotations:2.9.0"
	include "com.fasterxml.jackson.core:jackson-core:2.9.3"
	include "com.neovisionaries:nv-websocket-client:2.6"
	include "com.squareup.okio:okio:1.13.0"
	include "org.json:json:20170516"
	
	
	// soft dependencies
	
	modCompileOnly('com.github.replaceitem:scarpet-graphics:v0.1.2') {
		exclude (group: "org.jogamp.gluegen")
		exclude (group: "org.jogamp.jogl")
	}
	modRuntimeOnly('com.github.replaceitem:scarpet-graphics:v0.1.2') {
		exclude (group: "org.jogamp.gluegen")
		exclude (group: "org.jogamp.jogl")
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.mod_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 17
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}


modrinth {
	token = System.getenv("MODRINTH_TOKEN")
	projectId = "m00L1GVJ"
	versionNumber = project.mod_version
	versionType = "release"
	uploadFile = remapJar
	gameVersions = ["1.19"]
	loaders = ["fabric"]
	dependencies = []
	syncBodyFrom = rootProject.file("README.md").text
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}